8253455: Record Classes (final) javax.lang.model changes
Co-authored-by: Vicente Romero <vicente.romero@oracle.com>
Co-authored-by: Joe Darcy <joe.darcy@oracle.com>