@@ -105,17 +105,13 @@ public class JavaxLangModelForRecords extends TestRunner {
         tb.writeJavaFiles(r,
                 "record R(int i) {}");
 
-        List<String> expected = List.of("Note: field: i",
-                "Note: record component: i",
-                "Note: testQualifiedClassForProcessing" + File.separator + "src" + File.separator
-                     + "R" + File.separator + "R.java uses preview language features.",
-                "Note: Recompile with -Xlint:preview for details.");
+        List<String> expected = List.of(
+                "Note: field: i",
+                "Note: record component: i");
 
         for (Mode mode : new Mode[] {Mode.API}) {
             List<String> log = new JavacTask(tb, mode)
-                    .options("-processor", QualifiedClassForProcessing.class.getName(),
-                            "--enable-preview",
-                            "-source", Integer.toString(Runtime.version().feature()))
+                    .options("-processor", QualifiedClassForProcessing.class.getName())
                     .files(findJavaFiles(src))
                     .outdir(classes)
                     .run()
